fix(ci): 添加缺失的 lifeflow.spec 并修复构建脚本
- 添加 PyInstaller spec 文件到版本控制
- 修复 GitHub Actions 中的路径问题
- Windows 构建改用 bash shell

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ dist/
 dist-electron/
 build/
 release/
-*.spec
+# PyInstaller spec files (but keep lifeflow.spec)
+# *.spec
+!lifeflow.spec
 
 # IDE and editor
 .vscode/
