--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,8 @@ jobs:
           pip install pyinstaller
 
       - name: Build backend (macOS)
-        working-directory: src/backend
         run: |
+          cd src/backend
           pyinstaller --clean --noconfirm lifeflow.spec
           mkdir -p dist
           cp ../../dist/lifeflow-backend dist/
@@ -79,12 +79,12 @@ jobs:
           pip install pyinstaller
 
       - name: Build backend (Windows)
-        working-directory: src/backend
         run: |
+          cd src/backend
           pyinstaller --clean --noconfirm lifeflow.spec
-          if not exist dist mkdir dist
-          copy ..\..\dist\lifeflow-backend.exe dist\
-        shell: cmd
+          mkdir -p dist
+          cp ../../dist/lifeflow-backend.exe dist/
+        shell: bash
 
       - name: Install frontend dependencies
         working-directory: src/frontend
