fix(ci): 禁用 electron-builder 自动发布并添加权限
- 在 package.json 中设置 publish: null 禁用自动发布
- 给 build jobs 添加 contents: write 权限

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -67,6 +67,7 @@
   "build": {
     "appId": "com.lifeflow.app",
     "productName": "LifeFlow",
+    "publish": null,
     "directories": {
       "output": "release"
     },
